# Niner_Transit

./: README.md  app.js  package-lock.json  package.json
controllers/: serverController.js  trendController.js  userController.js
public/css/: style.css
routes/: trends.js  users.js
server/: app.py  db.py  dbinit.py  initdb.py  pyproject.toml  readme.md  routes.py
server/resources/: readme.md
views/: error.ejs  index.ejs  interactiveMap.ejs  lineTrends.ejs  stopTrends.ejs  suggestions.ejs
views/partials/: footer.ejs  header.ejs
views/trends/: interactiveMap.ejs  lineTrends.ejs  lineTrends01.ejs  lineTrends02.ejs  stopTrends.ejs  stopTrends01.ejs  stopTrends02.ejs  stopTrends03.ejs  stopTrends04.ejs  stopTrends05.ejs  stopTrends06.ejs  stopTrends07.ejs  stopTrends08.ejs  stopTrends09.ejs  stopTrends10.ejs  stopTrends11.ejs  stopTrends12.ejs
views/user/: login.ejs  new.ejs  suggestions.ejs
