[tool.poetry]
name = "TransitBackend"
version = "0.1.0"
description = "Backend server for 4155 Project"
authors = ["rspet123@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
sqlalchemy = "^1.4.32"
tqdm = "^4.63.0"
waitress = "^2.1.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
